fixed horizontal scroll bug

--- a/css/style1.css
+++ b/css/style1.css
@@ -30,8 +30,6 @@
 
 html{
     font-size: 12px;
-    width:100vw;
-    height:!00vh;
 }
 
 body{
